--- a/comida/templates/base.html
+++ b/comida/templates/base.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %} Mi Sitio {% endblock %}</title>
+    <title>{% block title %} Chok-Dog {% endblock %}</title>
     <link rel="stylesheet" href="{% static 'barra.css' %}">
+    <link rel="icon" type="static/img" href="{% static 'img/logo.png' %}">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
    
 </head>
