--- a/comida/templates/pago.html
+++ b/comida/templates/pago.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
-{% block title %} Pago {% endblock %}
+{% block title %} Pasarela {% endblock %}
 
 {% block content %}
 <link rel="stylesheet" href="{% static 'pago.css' %}">
@@ -95,7 +95,7 @@
                     </div>
 
                     <button type="button" class="anterior" onclick="mostrarPaso(2)">Anterior</button>
-                    <button class="pedido" type="submit" id="submit-button">Confirmar Pedido</button>
+                    <button class="button" type="submit" id="submit-button">Confirmar Pedido</button>
                 </div>
             </form>
         </div>  
