--- a/comida/templates/carrito.html
+++ b/comida/templates/carrito.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
-{% block title %} Productos {% endblock %}
+{% block title %} Carrito {% endblock %}
 
 {% block content %}
 <link rel="stylesheet" href="{% static 'carrito.css' %}">
