--- a/comida/templates/home.html
+++ b/comida/templates/home.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %} inicio {% endblock %}
+{% block title %} Inicio {% endblock %}
 
 {% block content %}
 
