--- a/comida/templates/iniciar.html
+++ b/comida/templates/iniciar.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
-{% block title %} inicio sesión {% endblock %}
+{% block title %} Inicio Sesión {% endblock %}
 
 {% block content %}
 
