--- a/comida/templates/pagina.html
+++ b/comida/templates/pagina.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
-{% block title %} inicio sesión {% endblock %}
+{% block title %} Inicio {% endblock %}
 
 {% block content %}
 <link rel="stylesheet" href="{% static 'pagina.css' %}">
