--- a/comida/templates/servicios.html
+++ b/comida/templates/servicios.html
@@ -21,7 +21,7 @@
                 {% if request.user.is_authenticated %}
                     <a href="{% url 'reservas' %}" class="service-button">Reservar Ahora</a>
                 {% else %}
-                    <a href="#" class="service-button" onclick="mostrarMensaje()">Reservar Ahora</a>
+                    <a href="#" class="service-button" onclick="mostrarMensaje('Debes iniciar sesión para hacer una reserva.')">Reservar Ahora</a>
                 {% endif %}
             </div>
         </div>
@@ -41,7 +41,12 @@
             </div>
         
             <div class="bton">
-                <a href="{% url 'productos' %}" class="service-button">Ver Menú</a>
+                {% if request.user.is_authenticated %}
+                    <a href="{% url 'productos' %}" class="service-button">Ver Menú</a>
+                {% else %}
+                    <a href="#" class="service-button" onclick="mostrarMensaje('Debes iniciar sesión para poder ver los productos.')">Ver productos</a>
+                {% endif %}
+                
                 
             </div>
         </div>
@@ -71,19 +76,50 @@
         <div class="service-separator"></div>
     </div>
 </section>
+<style>
+  /* Personalizar el color del icono de advertencia */
+.swal2-icon.swal2-warning {
+    border-color: #D4AF37 !important; /* Cambia el color del borde del círculo */
+    color: #D4AF37 !important; /* Cambia el color del ícono */
+}
+
+
+/* Estilos del botón */
+.btn-custom {
+    background-color: #D4AF37 !important;
+    color: white !important;
+    border-radius: 10px;
+    padding: 10px 15px;
+    font-size: 16px;
+    border: none !important;
+    outline: none !important;
+    box-shadow: none !important;
+}
+.btn-custom:hover {
+    background-color: #b28e2c !important;
+}
+
+</style>
+
 <script>
-    function mostrarMensaje() {
+    function mostrarMensaje(mensaje) {
         Swal.fire({
             title: "¡Inicia sesión!",
-            text: "Debes iniciar sesión para hacer una reserva.",
+            text: mensaje,
             icon: "warning",
-            confirmButtonText: "Ok"
+            confirmButtonText: "Ok",
+            customClass: {
+                
+                confirmButton: "btn-custom"
+            }
         });
     }
+
+
     function toggleInfo(id) {
         var element = document.getElementById(id);
         element.classList.toggle("show");
     }
-
 </script>
+
 {% endblock %}
