--- a/comida/templates/historial.html
+++ b/comida/templates/historial.html
@@ -52,7 +52,7 @@
                             <button class="btn delete" onclick="confirmarEliminacionPedido('{{ pedido.id }}')"><i class='bx bxs-trash-alt'></i></button>
                             <!-- Cancelar solo si el pedido está Pendiente -->
                             {% if pedido.estado == "pendiente" %}
-                                <button class="bton" title="cancelar"><a href="{% url 'cancelar_pedido' pedido.id %}"  onclick="return confirm('¿Estás seguro de que quieres cancelar este pedido?');"><i title="cancelar" class='bx bxs-x-circle' style="color: red;"></i></a></button>
+                            <a href="{% url 'cancelar_pedido' pedido.id %}"  onclick="return confirm('¿Estás seguro de que quieres cancelar este pedido?');"><button class="bton" title="cancelar"><i title="cancelar" class='bx bxs-x-circle' style="color: red;"></i></button></a>
                                 
                             {% endif %}
                         </td>
@@ -89,7 +89,7 @@
                         <td>
                             <button class="btn delete" onclick="eliminarReserva('{{ reserva.id }}')"><i class='bx bxs-trash-alt'></i></button>
                             {% if reserva.estado == "pendiente" %}
-                                <button class="bton" title="cancelar"><a href="{% url 'cancelar_reserva' reserva.id %}" onclick="return confirm('¿Estás seguro de que quieres cancelar esta reserva?');"><i title="cancelar" class='bx bxs-x-circle' style="color: red;"></i></a></button>
+                            <a href="{% url 'cancelar_reserva' reserva.id %}" onclick="return confirm('¿Estás seguro de que quieres cancelar esta reserva?');"><button class="bton" title="cancelar"><i title="cancelar" class='bx bxs-x-circle' style="color: red;"></i></button></a>
                             {% endif %}
                         </td>
                     </tr>
