--- a/comida/templates/historial.html
+++ b/comida/templates/historial.html
@@ -104,19 +104,13 @@
             </table>
             <button class="rest" onclick="restaurarReservas()">Restaurar Reservas</button>
         </div>
-        
-        
-        
-        
-    </div>
-    
 
-        
-    
-    
+    </div>
 
     <script src="{% static 'js/historial.js' %}"></script>
-    
+    <script>
+        
+    </script>
     
     
 {% endblock %}
