--- a/comida/static/servicios.css
+++ b/comida/static/servicios.css
@@ -12,7 +12,7 @@
 .section-title {
     font-size: 2.5rem;
     font-weight: bold;
-    color: #e4a853;
+    color: var(--dorado);
     margin-bottom: 0.5rem;
 }
 
@@ -42,20 +42,10 @@
     box-shadow: 0px 4px 20px rgba(255, 255, 255, 0.2);
 }
 
-.service-icon {
-    font-size: 3rem;
-    color: #e4a853;
-    margin-bottom: 1rem;
-    transition: color 0.3s;
-}
-
-.service-card:hover .service-icon {
-    color: #ffcc70;
-}
 
 .service-title {
     font-size: 1.8rem;
-    color: #e4a853;
+    color: var(--dorado);
     margin-bottom: 1rem;
     font-weight: bold;
 }
@@ -67,7 +57,7 @@
 
 .service-separator {
     height: 2px;
-    background: #555;
+    background: var(--dorado);
     width: 60%;
     margin: 2rem auto;
 }
@@ -92,7 +82,7 @@
 }
 
 .service-button:hover {
-    background: #fff;
+    background: var(--dorado);
     transform: scale(1.05);
 }
 .service-info {
