--- a/comida/templates/base.html
+++ b/comida/templates/base.html
@@ -93,14 +93,14 @@
                         
                     </ul>
                 </div>
-                <div class="footer-col">
+                <!-- <div class="footer-col">
                     <h4>Propietario</h4>
                     <ul>
                         <li><a href="#">Andrea Julieth Villaquira Escovar</a></li>
                         <li><a href="#">Arley Ríos Rivera</a></li>
                         
                     </ul>
-                </div>
+                </div> -->
                 <div class="footer-col">
                     <h4>Redes Sociales</h4>
                     <div class="social-links">
