--- a/comida/templates/manual.html
+++ b/comida/templates/manual.html
@@ -9,73 +9,80 @@
     <h1>Manual de Usuario</h1>
     
     <div class="step">
-        <h2>Paso 1: Inicio de Sesión y Registro</h2>
+        <h2>Inicio de Sesión y Registro</h2>
         <p>Para acceder a la plataforma, puede registrarse como nuevo usuario o iniciar sesión con su cuenta existente.</p>
+        <br>
         <ul>
+            <li>🎗️ En el icono en la parte superior derecha entrara para iniciar sesion y el manual de usuario.</li>
             <li>🎗️ Haga clic en "Registrarse" para crear una nueva cuenta.</li>
             <img src="{% static 'img/home.png' %}" alt="Registro e Inicio de Sesión">
-            <li>🎗️  Ingrese sus datos personales como nombre, correo, teléfono y dirección.</li>
+            <li>🎗️  Ingrese sus datos personales como nombre y apellido, nombre de usuario, correo, teléfono y dirección.</li>
             <img src="{% static 'img/regis.png' %}" alt="Registro e Inicio de Sesión">
-            <li>Si ya tiene una cuenta, haga clic en "Iniciar sesión" e ingrese sus datos, en caso tal que haya olvidado su contraseña.</li>
+            <li> 🎗️Si ya tiene una cuenta, haga clic en "Iniciar sesión" e ingrese sus datos, en caso tal que haya olvidado su contraseña, seleccione donde dice ¿Olvidaste tu Contraseña?.</li>
             <img src="{% static 'img/inicio.png' %}" alt="Registro e Inicio de Sesión">
-            <li>🎗️ Si ya tiene una cuenta, haga clic en "Iniciar sesión" e ingrese sus datos, en caso tal que haya olvidado su contraseña.</li>
+            <li>🎗️ Ingrese el correo electronico que tiene asociado a su cuenta para que le llegue un enlace donde podra cambiar la contraseña.</li>
+            <li>🎗️ ingrese la nueva contraseña y puede verificarla al dar clik al ojito, de clik en guardar y listo, ya puedes iniciar sesión.</li>
             <img src="{% static 'img/correo.png' %}" alt="Registro e Inicio de Sesión">
-            <li>🎗️ Si ya tiene una cuenta, haga clic en "Iniciar sesión" e ingrese sus datos, en caso tal que haya olvidado su contraseña.</li>
-            <img src="{% static 'img/contraseña.png' %}" alt="Registro e Inicio de Sesión">
+            
         </ul>
-        <p>luego de iniciar sesion lo mandara al inicio</p>
+        <p>Despues de inciar sesión o registrarse lo direccionara al inicio, ya tendra acceso al perfil de usuario, productos, servicio de reserva, carrito de compra e historial</p>
         <img src="{% static 'img/pagina.png' %}" alt="Registro e Inicio de Sesión">
     </div>
 
     <div class="step">
-        <h2>Paso 2: Reserva de Mesas</h2>
+        <h2>Reserva de Mesas</h2>
         <p>Para reservar una mesa, siga los siguientes pasos:</p>
+        <br>
         <ul>
-            <li>Acceda a la sección de reservas y selecione el boton de reservar ahora.</li>
+            <li>🎗️ Acceda a la sección de servicios y selecione el boton de reservar ahora.</li>
             <img src="{% static 'img/servicios.png' %}" alt="Reserva de Mesas">
             <li>🎗️ Ingrese los datos neceesarios para la reserva.</li>
             <li>🎗️ Seleccione una mesa disponible.</li>
             <li>🎗️ Elija la fecha y el horario permitido (5 PM a 11 PM).</li> 
             <li>🎗️ dar clik al boton reservar y espere hasta que salga el mensaje de exito</li> 
             <img src="{% static 'img/reservas.png' %}" alt="Reserva de Mesas">
-        
         </ul>
+        <p>le llegara un mensaje de los datelles de la resevar al correo ingresado.</p>
         
-        <img src="{% static 'img/reservas.png' %}" alt="Reserva de Mesas">
     </div>
 
     <div class="step">
-        <h2>Paso 3: Proceso de Compra</h2>
-        <p>Seleccione los productos que desea comprar y agréguelos al carrito.</p>
+        <h2>Proceso de Compra</h2>
+        <p>Se dirije a productos, seleciona los que desea y los agregara al carrito dando clik en el boton agregar al carrito.</p>
         <img src="{% static 'img/productos.png' %}" alt="Proceso de Compra">
         <ul>
-            <li>🎗️ Acceda a la sección de compra.</li>
-            <li>🎗️ Verifique los productos seleccionados.</li>
+            <li>🎗️Ingresa al carrito en el icono en la parte siperiror derecha.</li>
+            <li>🎗️ Verifique los productos seleccionados, puede cambiar la cantidad y eliminar un producto no deseado.</li>
             <li>🎗️ Haga clic en "Proceder al pago".</li>
+            <li>🎗️ Haga clic en "Proceder al pago" para realizar el pago o en seguir comprando para ir a la pagina de productos.</li>
         </ul>
         <img src="{% static 'img/carrito.png' %}" alt="Proceso de Compra">
         <ul>
-            <li>Acceda a la sección de compra.</li>
-            <li>Verifique los productos seleccionados.</li>
-            <li>Haga clic en "Proceder al pago".</li>
+            <p>hay 3 pasos a seguir para completra la compra</p>
+            <li>🎗️ paso 1: verifique o ingrese sus datos.</li>
+            <li>🎗️ Haga clic en "en sisguiente para el paso dos".</li>
         </ul>
         <img src="{% static 'img/pago.png' %}" alt="Proceso de Compra">
+        <ul>
+            <li>🎗️ paso 2: selecionar el metodo de pago.</li>
+            <li>🎗️ entre las opciones esta nequi y daviplata y pago contra entrega, le dara clik le aparecera el qr y numero para realizar el pago.</li>
+            
+            <li>🎗️ Haga clic en "en sisguiente para el paso tres".</li>
+        </ul>
+        <img src="{% static 'img/pago.png' %}" alt="Proceso de Compra">
+        <ul>
+            <li>🎗️ paso 3: si seleciono nequi o daviplata le aparecera la opcion para agregar el comprobante de pago</li>
+            <li>🎗️ y en pago contraentrega solo le aparecera para comfirmar pedido</li>
+            <li>🎗️ luego le da clik a confirmar pedido espera un memnto y aparecerael mensaje de exito</li>
+        </ul>
+        <img src="{% static 'img/pago.png' %}" alt="Proceso de Compra">
+        <p>le llegara un mensaje de los datelles de la compra al correo ingresado.</p>
     </div>
 
     <div class="step">
-        <h2>Paso 4: Métodos de Pago</h2>
-        <p>El sistema permite pagos mediante Nequi o Daviplata. Siga estos pasos:</p>
-        <ul>
-            <li>🎗️ Seleccione el método de pago.</li>
-            <li>🎗️ Escanee el código QR correspondiente.</li>
-            <li>🎗️ Suba el comprobante de pago.</li>
-            <li>🎗️ Confirme el pedido.</li>
-        </ul>
-        <img src="{% static 'img/pago.png' %}" alt="Métodos de Pago">
-    </div>
-    <div class="step">
-        <h2>Paso 5: Contactenos</h2>
+        <h2>Contactenos</h2>
         <p>Al ingresar a este apartado tendras un formulario para que puedas comunicarte o darnos tu opinion.</p>
+        <br>
         <ul>
             <li>🎗️ ingrese los datos necesarios y el mensaje.</li>
             <li>🎗️ despues de dar clik en reservar se envia el menaje.</li>
@@ -83,8 +90,9 @@
         <img src="{% static 'img/contactenos.png' %}" alt="Métodos de Pago">
     </div>
     <div class="step">
-        <h2>Paso 6: Perfil</h2>
+        <h2>Perfil</h2>
         <p>Podras ver tus datos ingresados</p>
+        <br>
         <ul>
             <li>🎗️ al dar clic en editar perfil, podras editar tu informacion y agregar una foto de perfil </li>
             
