--- a/comida/static/home.css
+++ b/comida/static/home.css
@@ -112,6 +112,12 @@ main::before {
     object-fit: cover; 
 }
 
+.contenido_id{
+    padding-top: 50px;
+    width: 100%;
+    gap: 20px;
+}
+
 
 @media (max-width: 1024px) {
     .contenido {
