--- a/comida/templates/base.html
+++ b/comida/templates/base.html
@@ -24,11 +24,16 @@
             {% if not user.is_authenticated %}
                 <a href="{% url 'home' %}" class="{% if request.path == '/' %}active{% endif %}">Inicio</a>
             {% endif %}
-            
+            {% if user.is_authenticated %}
             <a href="{% url 'nosotros' %}" class="{% if request.path|slice:":9" == "/nosotros" %}active{% endif %}">Nosotros</a>
             <a href="{% url 'servicios' %}" class="{% if request.path|slice:":10" == "/servicios" %}active{% endif %}">Servicios</a>
             <a href="{% url 'contactenos' %}" class="{% if '/contactenos' in request.path %}active{% endif %}">Contáctenos</a>
-        
+            {% else %}
+            <a href="{% url 'home' %}#nosotros" class="{% if request.path|slice:":9" == "/nosotros" %}active{% endif %}">Nosotros</a>
+            <a href="{% url 'home' %}#servicios" class="{% if request.path|slice:":10" == "/servicios" %}active{% endif %}">Servicios</a>
+            <a href="{% url 'home' %}#contactenos" class="{% if '/contactenos' in request.path %}active{% endif %}">Contáctenos</a>
+            {% endif %}
+
             {% if user.is_authenticated %}
                 <a href="{% url 'productos' %}" class="{% if request.path|slice:":10" == "/productos" %}active{% endif %}">Productos</a>
             {% endif %}
@@ -118,6 +123,7 @@
     <script src="{% static 'js/carrito.js' %}"></script>
     <script src="{% static 'js/perfil.js' %}"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    
     
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     {% if messages %}
