--- a/comida/templates/email_contrasena.html
+++ b/comida/templates/email_contrasena.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block content %}
-<link rel="stylesheet" href="{% static 'contraseña.css' %}">
+<link rel="stylesheet" href="{% static 'restablecer.css' %}">
 
 <div class="section">
     <div class="container">
