--- a/comida/templates/email_restablecer.html
+++ b/comida/templates/email_restablecer.html
@@ -2,8 +2,8 @@
 {% load static %}
 
 {% block content %}
+<link rel="stylesheet" href="{% static 'restablecer.css' %}">
 
-<link rel="stylesheet" href="{% static 'contraseña.css' %}">
 <div class="section">
     <div class="container">
         <div class="wrapper restablecer-wrapper">
