--- a/comida/static/login.css
+++ b/comida/static/login.css
@@ -42,10 +42,16 @@
     margin-top: 20px;
     
 }
-.enl a{
-    color: var(--negro-profundo);
+.enl a {
+    color: var(--dorado);
     text-decoration: none;
-   
+    transition: font-size 0.3s ease, color 0.3s ease;
+}
+
+.enl a:hover {
+    font-size: 19px;
+    color: #b8860b; 
+    
 }
 label {
     display: block;
